0.8.0/_sources/gallery/annotate-2d.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/annotate-2d.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_annotate-2d.py:


Annotate 2D
===========

Display one points layer ontop of one image layer using the ``add_points`` and
``add_image`` APIs

.. tags:: analysis

.. GENERATED FROM PYTHON SOURCE LINES 10-28



.. image-sg:: /gallery/images/sphx_glr_annotate-2d_001.png
   :alt: annotate 2d
   :srcset: /gallery/images/sphx_glr_annotate-2d_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    click to add points; close the window when finished.
    /home/runner/work/docs/docs/.venv/lib/python3.12/site-packages/napari/_qt/qt_event_loop.py:50: UserWarning: System theme detection requires a Qt6 backend. Please switch to PyQt6 or PySide6 to use it.
      theme_type=get_system_theme(),
    /home/runner/work/docs/docs/.venv/lib/python3.12/site-packages/napari/_qt/qt_event_loop.py:50: UserWarning: System theme detection requires a Qt6 backend. Please switch to PyQt6 or PySide6 to use it.
      theme_type=get_system_theme(),
    you clicked on:
    []






|

.. code-block:: Python


    import numpy as np
    from skimage import data

    import napari

    print('click to add points; close the window when finished.')

    viewer = napari.Viewer()
    layer = viewer.add_image(data.astronaut(), rgb=True)
    points = viewer.add_points(np.zeros((0, 2)))
    points.mode = 'add'

    if __name__ == '__main__':
        napari.run()

        print('you clicked on:')
        print(points.data)


.. _sphx_glr_download_gallery_annotate-2d.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: annotate-2d.ipynb <annotate-2d.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: annotate-2d.py <annotate-2d.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: annotate-2d.zip <annotate-2d.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
